# CoverFlow

./: .env.cloud  .env.tauri  .gitignore  App.tsx  LICENSE.txt  README.md  constants.ts  index.css  index.html  index.tsx  metadata.json  package.json  tailwind.config.cjs  translations.ts  types.ts  vite.config.ts
.github/workflows/: pages.yml  release.yml
components/: BackgroundCropModal.tsx  Canvas.tsx  ConfirmModal.tsx  DecorationEditorModal.tsx  DecorationLibrary.tsx  ExportModal.tsx  LayersPanel.tsx  LivePreview.tsx  ProjectPresetModal.tsx  Sidebar.tsx  Toast.tsx
hooks/: useLocalProjects.ts
public/: manifest.webmanifest
scripts/: release.cjs  sync-tauri-version.cjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
storage/: CloudAdapter.ts  IndexedDBAdapter.ts  LocalFileAdapter.ts  StorageAdapter.ts  storage.ts
utils/: backgroundStyles.ts  decorationStyles.ts  helpers.ts  imageCrop.ts
