[package]
name = "coverflow"
version = "3.3.1"
edition = "2021"
build = "build.rs"
authors = ["sangyuxiaowu"]
description = "CoverFlow Designer"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde_json = "1"
